[package]
name = "AoC2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoize = { version = "0.4.2", features = ["full"], git = "https://github.com/dermesser/memoize.git" }
priority-queue = "1.3.2"
regex = "1.10.2"
